Icons added and Activity Indicator

--- a/VismaWeather/VismaWeather.Android/VismaWeather.Android.csproj
+++ b/VismaWeather/VismaWeather.Android/VismaWeather.Android.csproj
@@ -83,7 +83,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\a16n.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VismaWeather\VismaWeather.csproj">
       <Project>{1D751668-BE50-4475-B3F5-BFDB8F6D00FD}</Project>
@@ -242,6 +244,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\a83.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\a15n.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
